--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   firebase_database: ^7.1.1
   agora_rtc_engine: ^4.0.2
   permission_handler: ^8.1.2
+  shared_preferences: ^2.0.6
 dev_dependencies:
   flutter_test:
     sdk: flutter
